[tool.poetry]
name = "repl_python3_BigBrainBot"
version = "0.1.0"
description = ""
authors = ["SaurabhSaralaya <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
bs4 = "^0.0.1"
discord = "^1.7.3"
Markdown = "^3.3.6"
Deprecated = "^1.2.13"
requests = "^2.28.1"
repeat = "^0.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
